# server/route/route.go
@@ -122,12 +122,12 @@ func NewService() *Service {
 		// category
 		adminV1.POST("/category/create", category.CreateCategory)
 		adminV1.PUT("/category/update", category.UpdateCategory)
-		adminV1.PUT("/category/delete", category.DeleteCategoryFirst)
+		adminV1.PATCH("/category/delete-first", category.DeleteCategoryFirst)
 		adminV1.GET("/category/get-id-edit/:category_id", category.GetCategoryByIDForEdit)
 		adminV1.GET("/category/get-update-date/:update_date", category.GetCategoryByUpdateDateForEdit)
 		adminV1.GET("/category/get-enable/:enable", category.GetCategoryByEnableForEdit)
-		adminV1.DELETE("/category/delete", category.DeleteCategorySecond)
-		adminV1.PATCH("category/resolve", category.ResolveCategory)
+		adminV1.DELETE("/category/delete-second", category.DeleteCategorySecond)
+		adminV1.PATCH("/category/resolve", category.ResolveCategory)
 
 		// product
 		adminV1.GET("/product/get-all", product.GetAllProductForView)
